[tool.poetry]
name = "markdown-image-caption"
version = "0.2.0"
description = "Image caption support for Python Markdown"
authors = ["Sander Teunissen"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = ">=3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
